# muchyesrcs

./: .ccls  .zshcompile  .zshrc  .zshtest  CMakeLists.txt  README.md  bspwmrc  downloads.sh  installScript.sh  sxhkdrc
nvim/: coc-settings.json  init.vim  keybindings.vim  settings.vim
nvim/nvim/: keybindings.vim
nvim/vim-plug/: ._plugins.vim  plugins.vim
